--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -1177,6 +1177,11 @@ save_plot("selection/single-pop/simple_bgs/bgs_mult_neutral_3.pdf", p3, base_hei
 
 # BGS with Mutation rate variation
 
+## Variation in both loci
+
+This first set of models explore the situation where the local
+mutation rate changes both mu_l and mu_r 
+
 ### Building Demes files
 
 ```{r, demes-BGS-1, include=F, eval=T, results=F, message=F, warning=F}
@@ -1192,9 +1197,9 @@ scale_sel <- c(1e-5, 1e-4, 5e-4)
 shape_sel <- 20
 # mut rates
 scales_mu <- c(1e-7, 1e-8, 1e-9)
-shapes_mu <- c(1, 3, 10, 30, 100, 1000000)
+shapes_mu <- c(1, 10, 30, 100, 1000000)
 # rec rates
-scales_rec <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 0)
+scales_rec <- c(1e-4, 1e-5, 1e-6, 1e-7, 1e-8, 1e-9, 0)
 shapes_rec <- c(0.1, 1, 10, 1000000)
 
 params <- crossing(N, w, l, shape_sel, scale_sel, shapes_mu, scales_mu, shapes_rec, scales_rec)
@@ -1298,7 +1303,6 @@ for(i in 1:n_models) {
     }
   }
 }
-
 ```
 
 ### Running moments++
@@ -1352,7 +1356,7 @@ for(i in 1:n_models) {
     for(k in 1:w) { # left locus
       
       name <- paste("model_", i, "_l_", k, "_r_", j, "_expectations.txt", sep="")
-      expectations <- read.table(paste("selection/single-pop/mut_rate_var/model_", i, "/", name, sep=""))
+      expectations <- read.table(paste("selection/single-pop/mut_rate_var/", name, sep=""))
       
       hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
       one_minus_f[k] <- hr / pi0
@@ -1412,7 +1416,7 @@ for(i in 1:n_models) {
                    axis.title.x=element_blank())
   
   comb <- plot_grid(p1, p2, p3, p4, ncol=1)
-  save_plot(paste("selection/single-pop/mut_rate_var/model_", i, "/model_", i, "_landscapes.pdf", sep=""), comb, base_height=10, base_width=12)
+  save_plot(paste("selection/single-pop/mut_rate_var/model_", i, "_landscapes.pdf", sep=""), comb, base_height=10, base_width=12)
       
   # standardizing
   windows$ss_pi_BGS <- (windows$hr_BGS - mean(windows$hr_BGS)) / sd(windows$hr_BGS)
@@ -1429,12 +1433,12 @@ for(i in 1:n_models) {
   apiss <- anova.pi$"Sum Sq"
   anova.pi$VarExp <- apiss / sum(apiss)
 
-  r2[i, 1] <- (anova.pi$VarExp[1] + anova.pi$VarExp[2] + anova.pi$VarExp[3] + anova.pi$VarExp[4] + anova.pi$VarExp[5] + anova.pi$VarExp[6]) * 100
+  r2[i, 1] <- (anova.pi$VarExp[1] + anova.pi$VarExp[2] + anova.pi$VarExp[3] + anova.pi$VarExp[4] + anova.pi$VarExp[5]) * 100
   r2[i, 2] <- anova.pi$VarExp[1] * 100
   r2[i, 3] <- anova.pi$VarExp[2] * 100
   r2[i, 4] <- anova.pi$VarExp[3] * 100
-  r2[i, 5] <- anova.pi$VarExp[3] * 100
-  r2[i, 6] <- anova.pi$VarExp[3] * 100
+  r2[i, 5] <- anova.pi$VarExp[4] * 100
+  r2[i, 6] <- anova.pi$VarExp[5] * 100
 }
 
 names(landscapes) <- 1:ncol(landscapes)
@@ -1468,16 +1472,16 @@ for(i in unique(molten_windows$N)) {
 }
 
 # zooming in plots with tiny mut rate variation
-p1 <- ggplot(data=filter(molten_windows, N==1000, shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, shape=variable, color=as.factor(scale_sel)))
+p1 <- ggplot(data=filter(molten_windows, N==1000, shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, color=as.factor(scale_sel)))
 p1 <- p1 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
 p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
 p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
 p1 <- p1 + labs(title="Hr landscapes, N=1000, shape_mu=1e+6, scale_mu=1e-9, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
 p1 <- p1 + theme(axis.title=element_text(size=16),
-               axis.text=element_text(size=12),
-               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
-save_plot("selection/single-pop/Hr_landscapes_17.pdf", p1, base_height=10, base_width=15)
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var/Hr_landscapes_", c + 1, ".pdf", sep=""), p1, base_height=10, base_width=15)
 
 p2 <- ggplot(data=filter(molten_windows, N==1000, shapes_mu==1e+6, scales_mu==1e-8), aes(x=window, y=value, color=as.factor(scale_sel)))
 p2 <- p2 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
@@ -1485,10 +1489,10 @@ p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
 p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
 p2 <- p2 + labs(title="Hr landscapes, N=1000, shape_mu=1e+6, scale_mu=1e-8, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
 p2 <- p2 + theme(axis.title=element_text(size=16),
-               axis.text=element_text(size=12),
-               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
-save_plot("selection/single-pop/Hr_landscapes_18.pdf", p2, base_height=10, base_width=15)
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var/Hr_landscapes_", c + 2, ".pdf", sep=""), p2, base_height=10, base_width=15)
 
 p3 <- ggplot(data=filter(molten_windows, N==10000, shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, color=as.factor(scale_sel)))
 p3 <- p3 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
@@ -1496,10 +1500,10 @@ p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
 p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
 p3 <- p3 + labs(title="Hr landscapes, N=10000, shape_mu=1e+6, scale_mu=1e-9, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
 p3 <- p3 + theme(axis.title=element_text(size=16),
-               axis.text=element_text(size=12),
-               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
-save_plot("selection/single-pop/Hr_landscapes_19.pdf", p3, base_height=10, base_width=15)
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var/Hr_landscapes_", c + 3, ".pdf", sep=""), p3, base_height=10, base_width=15)
 
 p4 <- ggplot(data=filter(molten_windows, N==10000, shapes_mu==1e+6, scales_mu==1e-8), aes(x=window, y=value, color=as.factor(scale_sel)))
 p4 <- p4 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
@@ -1507,13 +1511,15 @@ p4 <- p4 + scale_x_discrete(breaks=pretty_breaks())
 p4 <- p4 + scale_y_continuous(breaks=pretty_breaks())
 p4 <- p4 + labs(title="Hr landscapes, N=10000, shape_mu=1e+6, scale_mu=1e-8, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
 p4 <- p4 + theme(axis.title=element_text(size=16),
-               axis.text=element_text(size=12),
-               axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
-save_plot("selection/single-pop/Hr_landscapes_20.pdf", p4, base_height=10, base_width=15)
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var/Hr_landscapes_", c + 4, ".pdf", sep=""), p4, base_height=10, base_width=15)
 
 # visualizing R^2
 molten_tbl <- pivot_longer(tbl, cols=c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2", "Mu:Sel_R2", "Rec:Sel_R2"), names_to="variable")
+
+# TODO change filter parameters (mu) after new set of evolutionary parameters is used
 
 p5 <- ggplot(data=filter(molten_tbl, N==1000, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
 p5 <- p5 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
@@ -1522,7 +1528,7 @@ p5 <- p5 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
                               labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p5 <- p5 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p5 <- p5 + scale_y_continuous(breaks=pretty_breaks())
-p5 <- p5 + labs(title = "Var Explained, N=1000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p5 <- p5 + labs(title = "Var Explained, N=1000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
 p5 <- p5 + theme(axis.title=element_text(size=16), 
                  axis.text=element_text(size=12), 
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
@@ -1536,7 +1542,7 @@ p6 <- p6 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
                               labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p6 <- p6 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p6 <- p6 + scale_y_continuous(breaks=pretty_breaks())
-p6 <- p6 + labs(title = "Var Explained, N=1000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p6 <- p6 + labs(title = "Var Explained, N=1000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
 p6 <- p6 + theme(axis.title=element_text(size=16), 
                  axis.text=element_text(size=12), 
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
@@ -1550,7 +1556,7 @@ p7 <- p7 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
                               labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p7 <- p7 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p7 <- p7 + scale_y_continuous(breaks=pretty_breaks())
-p7 <- p7 + labs(title = "Var Explained, N=10000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p7 <- p7 + labs(title = "Var Explained, N=10000, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
 p7 <- p7 + theme(axis.title=element_text(size=16), 
                  axis.text=element_text(size=12), 
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
@@ -1564,17 +1570,388 @@ p8 <- p8 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
                               labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
 p8 <- p8 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
 p8 <- p8 + scale_y_continuous(breaks=pretty_breaks())
-p8 <- p8 + labs(title = "Var Explained, N=10000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y = "Variance Explained (%)")
+p8 <- p8 + labs(title = "Var Explained, N=10000, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
 p8 <- p8 + theme(axis.title=element_text(size=16), 
                  axis.text=element_text(size=12), 
                  axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
                  legend.text=element_text(size=16), legend.position="bottom")
 save_plot("selection/single-pop/R2_plot_4.pdf", p8, base_height=10, base_width=15)
+```
 
-# TODO
-# plot R^2 mut as a function of the variance of the Gamma distribution of mu,
-# with facet_grid(Var(rec)~M), shape = N, color = mean(s)
+## Variation in left locus only
 
+This second set of models explore the situation where the local
+mutation rate changes ONLY mu_l
+
+### Building demes files
+
+```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
+
+N <- 10000
+# number of independent genomic windows, each corresponding to a two-locus system
+w <- 100
+# length of each genomic block
+l <- 100
+# Gamma dist params
+# DFE
+scale_sel <- c(1e-5, 1e-4, 5e-4)
+shape_sel <- 20
+# mut rate right locus
+mu_r <- 1e-8
+# mut rates left locus
+scales_mu <- c(1e-7, 1e-8, 1e-9)
+shapes_mu <- c(10, 100, 1000000)
+# rec rates
+scales_rec <- c(1e-5, 1e-6, 1e-7, 1e-8)
+shapes_rec <- 1
+
+params <- crossing(N, w, l, shape_sel, scale_sel, mu_r, shapes_mu, scales_mu, shapes_rec, scales_rec)
+params$scenario <- 1:nrow(params)
+n_models <- nrow(params)
+
+write.csv(params, "selection/single-pop/mut_rate_var_left/params.csv", quote=F, row.names=F)
+
+Sys.setenv(num_models=n_models)
+Sys.setenv(w=w)
+```
+
+```{bash make_dirs, eval=T, message=FALSE, warning=FALSE, engine.opts='-i', include=F, results=F}
+
+source ~/.bashrc
+
+cd selection/single-pop/mut_rate_var_left/
+
+for((i=1;i<=n_models;i++));
+do
+  mkdir model_$i
+done
+
+cd ../../..
+```
+
+```{r, demes-BGS-2, include=F, eval=T, results=F, message=F, warning=F}
+
+for(i in 1:n_models) {
+  
+  cat(paste("Writing yaml files for model ", i, "...\n", sep=""))
+  
+  mus <- rgamma(n=w, shape=params$shapes_mu[i], scale=params$scales_mu[i]/params$shapes_mu[i])
+  rs <- rgamma(n=w, shape=params$shapes_rec[i], scale=params$scales_rec[i]/params$shapes_rec[i])
+  ss <- -rgamma(n=w, shape=params$shape_sel[i], scale=params$scale_sel[i]/params$shape_sel[i])
+  alpha <- 2 * params$N[i] * ss
+  
+  while(any(alpha < -20)) { 
+    
+    cat("Selection is too strong in at least one gene! Redrawing...\n")
+    ss <- -rgamma(n=w, shape=params$shape_sel[i], scale=params$scale_sel[i]/params$shape_sel[i])
+    alpha <- 2 * params$N[i] * ss
+  }
+  
+  while(sum(rs) > 1e-2) { 
+    
+    cat("Total recombination rate of chr is too high! Redrawing...\n")
+    rs <- rgamma(n=w, shape=params$shapes_rec[i], scale=params$scales_rec[i]/params$shapes_rec[i])
+  }
+  
+  windows <- bind_cols(mus, rs, ss, .name_repair="unique")
+  names(windows) <- c("mus", "recs", "dfe")
+  windows$pi0 <- 2 * params$N[i] * windows$mus
+  windows$alpha <- alpha
+  
+  write.csv(windows, paste("selection/single-pop/mut_rate_var_left/model_", i, "/windows.csv", sep=""), quote=F, row.names=F)
+  
+  for(j in 1:w) { # left locus
+    
+    for(k in 1:w) { # right locus
+      
+      mu_ratio <- l * windows$mus[j] / params$mu_r[k] # left / right
+      total_r <- colSums(windows[j:k,])["recs"]
+      
+      name <- paste("model_", i, "_l_", j, "_r_", k, sep="")
+      sink(paste("selection/single-pop/mut_rate_var_left/model_", i, "/", name, ".yaml", sep=""))
+      
+      cat("time_units: generations\n")
+      cat("demes:\n")
+      cat("  - name: X\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        start_size: ")
+      cat(as.integer(params$N[i]))
+      cat("\n")
+      cat("metadata:\n")
+      cat("  - name: mutation\n")
+      cat("    left_factor: ")
+      cat(mu_ratio)
+      cat("\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(params$mu_r[k])
+      cat("]\n")
+      cat("  - name: recombination\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(total_r)
+      cat("]\n")
+      cat("  - name: selection\n")
+      cat("    start_time: .inf\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(windows$dfe[j])
+      cat("]\n")
+      
+      sink()
+    }
+  }
+}
+```
+
+### Running moments++
+
+```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+
+source ~/.bashrc
+
+cd selection/single-pop/mut_rate_var_left/
+
+for((i=1;i<=n_models;i++));
+do
+  cp opt.bpp model_$i
+  cd model_$i
+  
+  for m in *.yaml
+  do
+    momentspp params=opt.bpp F=$m O=20
+  done
+  
+  cd ..
+done
+
+cd ../../..
+```
+
+### Plots
+
+```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+
+params <- read.table("selection/single-pop/mut_rate_var_left/params.csv", sep=",", header=T)
+n_models <- nrow(params)
+hr_BGS <- numeric(length=n_models)
+landscapes <- as.data.frame(matrix(nrow=n_models, ncol=w))
+
+r2 <- as.data.frame(matrix(nrow=n_models, ncol=6))
+colnames(r2) <- c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2", "Mu:Sel_R2", "Rec:Sel_R2")
+
+for(i in 1:n_models) {
+  
+  cat(paste("Retrieving data from model ", i, "...\n"))
+  
+  windows <- read.csv(paste("selection/single-pop/mut_rate_var_left/model_", i, "/windows.csv", sep=""), header=T)
+  hr_BGS <- numeric(length=w)
+  
+  for(j in 1:w) { # right locus
+  
+    pi0 <- windows$pi0[j]  
+    one_minus_f <- numeric(length=w)
+      
+    for(k in 1:w) { # left locus
+      
+      name <- paste("model_", i, "_l_", k, "_r_", j, "_expectations.txt", sep="")
+      expectations <- read.table(paste("selection/single-pop/mut_rate_var_left/model", i, "/", name, sep=""))
+      
+      hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
+      one_minus_f[k] <- hr / pi0
+    }
+    
+    hr_BGS[j] <- pi0 * prod(one_minus_f)
+  }
+  
+  landscapes[i,] <- hr_BGS
+  windows$hr_BGS <- hr_BGS
+
+  windows$bin <- 1:nrow(windows)
+  molten_bins <- pivot_longer(windows, cols=c("mus", "recs", "alpha", "pi0", "hr_BGS"), names_to="variable")
+  
+  p1 <- ggplot(data=windows, aes(x=bin, y=hr_BGS))
+  p1 <- p1 + geom_line() + theme_bw()
+  p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
+  p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
+  p1 <- p1 + labs(title=NULL, x=NULL, y=expression(H[r]))
+  p1 <- p1 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p2 <- ggplot(data=windows, aes(x=bin, y=mus))
+  p2 <- p2 + geom_line() + theme_bw()
+  p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
+  p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
+  p2 <- p2 + labs(title=NULL, x=NULL, y=expression(mu))
+  p2 <- p2 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p3 <- ggplot(data=windows, aes(x=bin, y=recs))
+  p3 <- p3 + geom_line() + theme_bw()
+  p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
+  p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
+  p3 <- p3 + labs(title=NULL, x=NULL, y=expression(r))
+  p3 <- p3 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  p4 <- ggplot(data=windows, aes(x=bin, y=alpha))
+  p4 <- p4 + geom_line() + theme_bw()
+  p4 <- p4 + scale_x_discrete(breaks=pretty_breaks())
+  p4 <- p4 + scale_y_continuous(breaks=pretty_breaks())
+  p4 <- p4 + labs(title=NULL, x=NULL, y=expression(alpha))
+  p4 <- p4 + theme(axis.title=element_text(size=16),
+                   axis.text=element_text(size=12),
+                   axis.text.y=element_blank(),
+                   axis.ticks=element_blank(),
+                   axis.title.x=element_blank())
+  
+  comb <- plot_grid(p1, p2, p3, p4, ncol=1)
+  save_plot(paste("selection/single-pop/mut_rate_var_left/model_", i, "/landscapes.pdf", sep=""), comb, base_height=10, base_width=12)
+      
+  # standardizing
+  windows$ss_pi_BGS <- (windows$hr_BGS - mean(windows$hr_BGS)) / sd(windows$hr_BGS)
+  windows$ss_pi0 <- (windows$pi0 - mean(windows$pi0)) / sd(windows$pi0)
+  windows$ss_mus <- (windows$mus - mean(windows$mus)) / sd(windows$mus)
+  windows$ss_recs <- (windows$recs - mean(windows$recs)) / sd(windows$recs)
+  windows$ss_dfe <- (windows$dfe - mean(windows$dfe)) / sd(windows$dfe)
+  
+  m.pi.1 <- lm(ss_pi_BGS ~ ss_mus + ss_recs + ss_dfe + ss_mus:ss_dfe + ss_recs:ss_dfe, data=windows)
+  
+  summary(m.pi.1)
+
+  anova.pi <- Anova(m.pi.1)
+  apiss <- anova.pi$"Sum Sq"
+  anova.pi$VarExp <- apiss / sum(apiss)
+
+  r2[i, 1] <- (anova.pi$VarExp[1] + anova.pi$VarExp[2] + anova.pi$VarExp[3] + anova.pi$VarExp[4] + anova.pi$VarExp[5]) * 100
+  r2[i, 2] <- anova.pi$VarExp[1] * 100
+  r2[i, 3] <- anova.pi$VarExp[2] * 100
+  r2[i, 4] <- anova.pi$VarExp[3] * 100
+  r2[i, 5] <- anova.pi$VarExp[4] * 100
+  r2[i, 6] <- anova.pi$VarExp[5] * 100
+}
+
+names(landscapes) <- 1:ncol(landscapes)
+tbl <- bind_cols(params, r2, landscapes)
+tbl$scale_sel <- -tbl$scale_sel
+write.csv(tbl, "selection/single-pop/mut_rate_var_left/tbl.csv", quote=F, row.names=F)
+
+molten_windows <- pivot_longer(tbl, cols=(ncol(params) + ncol(r2) + 1):ncol(tbl), names_to="window")
+molten_windows$window <- as.numeric(molten_windows$window)
+
+# visualizing raw landscapes
+c=1
+for(i in unique(molten_windows$N)) {
+  for(j in unique(molten_windows$scales_mu)) {
+    for(k in unique(molten_windows$scales_rec)) {
+      
+      p <- ggplot(data=filter(molten_windows, N==i, scales_mu==j, scales_rec==k), aes(x=window, y=value, color=as.factor(scale_sel)))
+      p <- p + geom_line() + facet_grid(shapes_rec~shapes_mu) + theme_bw()
+      p <- p + scale_x_discrete(breaks=pretty_breaks())
+      p <- p + scale_y_continuous(breaks=pretty_breaks())
+      p <- p + labs(title=paste("Hr landscapes, N=", i, ", mu=", j, ", r=", k, " cols~1/var_mu, rows~1/var_rec", sep=""), x="Window", y=expression(H[r]))
+      p <- p + theme(axis.title=element_text(size=16),
+                     axis.text=element_text(size=12),
+                     axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                     legend.position="bottom")
+      save_plot(paste("selection/single-pop/mut_rate_var_left/Hr_landscapes_", c, ".pdf", sep=""), p, base_height=10, base_width=15)
+      
+      c <- c + 1
+    }
+  }
+}
+
+# zooming in plots with tiny mut rate variation
+p1 <- ggplot(data=filter(molten_windows,shapes_mu==1e+6, scales_mu==1e-9), aes(x=window, y=value, color=as.factor(scale_sel)))
+p1 <- p1 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p1 <- p1 + scale_x_discrete(breaks=pretty_breaks())
+p1 <- p1 + scale_y_continuous(breaks=pretty_breaks())
+p1 <- p1 + labs(title="Hr landscapes, shape_mu=1e+6, scale_mu=1e-9, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p1 <- p1 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var_left/Hr_landscapes_", c + 1, ".pdf", sep=""), p1, base_height=10, base_width=15)
+
+p2 <- ggplot(data=filter(molten_windows, shapes_mu==1e+6, scales_mu==1e-8), aes(x=window, y=value, color=as.factor(scale_sel)))
+p2 <- p2 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p2 <- p2 + scale_x_discrete(breaks=pretty_breaks())
+p2 <- p2 + scale_y_continuous(breaks=pretty_breaks())
+p2 <- p2 + labs(title="Hr landscapes, shape_mu=1e+6, scale_mu=1e-8, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p2 <- p2 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var_left/Hr_landscapes_", c + 2, ".pdf", sep=""), p2, base_height=10, base_width=15)
+
+p3 <- ggplot(data=filter(molten_windows, shapes_mu==1e+6, scales_mu==1e-7), aes(x=window, y=value, color=as.factor(scale_sel)))
+p3 <- p3 + geom_line() + facet_grid(shapes_rec~scales_rec) + theme_bw()
+p3 <- p3 + scale_x_discrete(breaks=pretty_breaks())
+p3 <- p3 + scale_y_continuous(breaks=pretty_breaks())
+p3 <- p3 + labs(title="Hr landscapes, shape_mu=1e+6, scale_mu=1e-7, rows~1/var_rec, cols~mean_rec", x="Window", y=expression(H[r]))
+p3 <- p3 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+save_plot(paste("selection/single-pop/mut_rate_var_left/Hr_landscapes_", c + 3, ".pdf", sep=""), p3, base_height=10, base_width=15)
+
+# visualizing R^2
+molten_tbl <- pivot_longer(tbl, cols=c("Total_R2", "Mutation_R2", "Recombination_R2", "Selection_R2", "Mu:Sel_R2", "Rec:Sel_R2"), names_to="variable")
+
+p5 <- ggplot(data=filter(molten_tbl, scales_mu==1e-9), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p5 <- p5 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p5 <- p5 + geom_point(aes(shape=variable), size=4)
+p5 <- p5 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha), "Total"))
+p5 <- p5 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p5 <- p5 + scale_y_continuous(breaks=pretty_breaks())
+p5 <- p5 + labs(title = "Var Explained, mu=1e-9, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
+p5 <- p5 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/mut_rate_var_left/R2_plot_1.pdf", p5, base_height=10, base_width=15)
+
+p6 <- ggplot(data=filter(molten_tbl, scales_mu==1e-8), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p6 <- p6 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p6 <- p6 + geom_point(aes(shape=variable), size=4)
+p6 <- p6 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha), "Total"))
+p6 <- p6 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p6 <- p6 + scale_y_continuous(breaks=pretty_breaks())
+p6 <- p6 + labs(title = "Var Explained, mu=1e-8, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
+p6 <- p6 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/mut_rate_var_left/R2_plot_2.pdf", p6, base_height=10, base_width=15)
+
+p7 <- ggplot(data=filter(molten_tbl, scales_mu==1e-7), aes(x=shapes_mu, y=value, shape=variable, color=as.factor(scale_sel)))
+p7 <- p7 + geom_line() + facet_grid(shapes_rec~scales_rec)+ theme_bw()
+p7 <- p7 + geom_point(aes(shape=variable), size=4)
+p7 <- p7 + scale_shape_manual(values=c(0, 1, 2, 3, 4, 8), name = "",
+                              labels=c(expression(mu:alpha), expression(mu), expression(r:alpha), expression(r), expression(alpha),"Total"))
+p7 <- p7 + scale_x_continuous(breaks=unique(molten_tbl$shapes_mu), trans="log10") 
+p7 <- p7 + scale_y_continuous(breaks=pretty_breaks())
+p7 <- p7 + labs(title="Var Explained, mu=1e-7, rows~1/var_rec, cols~mean_rec", x="~1/var_mu", y="Variance Explained (%)")
+p7 <- p7 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), legend.position="bottom")
+save_plot("selection/single-pop/mut_rate_var_left/R2_plot_3.pdf", p7, base_height=10, base_width=15)
 ```
 
 # Selection 2-populations
